feat: initial get the list of users that you don't follow
